Multi-threaded handler instance of openstack nova Co-authored-by: garzelli95 <fede.garzelli@gmail.com> Co-authored-by: guidogagl <gagliardi.guido.96@gmail.com> Co-authored-by: MatteoDJon <m.dessi4@studenti.unipi.it>
